deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  guacamole
  namespace: guacamole
  labels:
    app:  guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  guacamole
    spec:
      containers:
      - name: guacd
        image: guacamole/guacd
        imagePullPolicy: Always
        ports:
        - containerPort: 4822
          name: guacd-port
      - name: guacamole
        image: guacamole/guacamole:latest
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 35
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
        - containerPort: 8080
          name:  guacamole-http        
      - name:  guacdb
        image:  postgres:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command: ["psql", "-U", "postgres", "-d", "postgres", "-c", "SELECT 1"]
          initialDelaySeconds: 45
          timeoutSeconds: 2
        readinessProbe:
          exec:
            command: ["psql", "-U", "postgres", "-d", "postgres", "-c", "SELECT 1"]
          initialDelaySeconds: 15
        ports:
        - containerPort:  5432
          name:  guacamole-db
        volumeMounts:
        - name: guac-initdb
          mountPath: /docker-entrypoint-initdb.d
        - name: guac-db
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: guac-initdb
        persistentVolumeClaim:
          claimName: guacamole-initdb
      - name: guac-db
        persistentVolumeClaim:
          claimName: guacamole-db
      restartPolicy: Always
---
